carousel and top bar z-index bug fix

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -8,25 +8,25 @@
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 400;
-  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizYRExUiTo99u79D0e0x8mN.ttf) format('truetype');
+  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v10/jizYRExUiTo99u79D0e0x8mN.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 700;
-  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizdRExUiTo99u79D0e8fOydLxUY.ttf) format('truetype');
+  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(https://fonts.gstatic.com/s/ptsans/v10/jizdRExUiTo99u79D0e8fOydLxUY.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v9/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
+  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v10/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v9/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
+  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v10/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
 }
 * {
   box-sizing: border-box;
@@ -52,6 +52,7 @@ body {
   align-items: none;
   flex-direction: row;
   position: fixed;
+  z-index: 2;
   height: 44px;
   background-color: #333;
 }
@@ -121,6 +122,7 @@ body {
   background-color: #fff;
   border-bottom: 1px solid lightgrey;
   width: 100%;
+  z-index: 0;
   height: 120px;
   margin-top: 44px;
   padding-bottom: 15px;
@@ -260,6 +262,7 @@ body {
   height: 500px;
   position: relative;
   overflow: hidden;
+  z-index: 0;
   margin-top: 16px;
 }
 @media (min-width: 1200px) {
@@ -301,4 +304,14 @@ body {
 .carousel img {
   width: 100%;
   display: none;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0%;
+    filter: opacity(0);
+  }
+  to {
+    opacity: 100%;
+    filter: opacity(1);
+  }
 }
