--- a/components/Header/Header.less
+++ b/components/Header/Header.less
@@ -3,6 +3,7 @@
   background-color: @lambda-times-color-white;
   .border-bottom-grey();
   .width-100();
+  z-index: 0;
   height: 120px;
   margin-top: 44px;
   padding-bottom: 15px;
